<resources>
    <string name="app_name">Union of Miners</string>
    <string name="usd">US dollar</string>
    <string name="eur">Euro</string>
    <string name="rub">Russian Rubble</string>
    <string name="gbp">British Pound</string>
    <string name="usd_short">USD</string>
    <string name="eur_short">EUR</string>
    <string name="rub_short">RUB</string>
    <string name="gbp_short">GBP</string>
    <string name="kzt_short">KZT</string>
    <string name="kzt">Kazakh Tenge</string>
    <string name="changed_24h">change in 24h</string>
    <string name="current_rate_usd">Current rate (USD)</string>
    <string name="current_rate_eur">Current rate (EUR)</string>
    <string name="current_rate_rub">Current rate (RUB)</string>
    <string name="current_rate_gbp">Current rate (GBP)</string>
    <string name="current_rate_kzt">Current rate (KZT)</string>
    <string name="volume_24h">Volume (24h)</string>
    <string name="market_cap_usd">Market cap (USD)</string>
    <string name="market_cap_eur">Market cap (EUR)</string>
    <string name="market_cap_rub">Market cap (RUB)</string>
    <string name="market_cap_gbp">Market cap (GBP)</string>
    <string name="market_cap_kzt">Market cap (KZT)</string>
    <string name="errot_title">Connection error</string>
    <string name="wrong">Unable to connect with the server. Check your internet connection and try again</string>
    <string name="try_later">Try later</string>
    <string name="refresh">Try again</string>
    <string name="market_cap">Market Cap</string>
    <string name="supply">Available Supply</string>
    <string name="rates">Stats:</string>
    <string name="today">Today</string>
    <string name="week1">1W</string>
    <string name="month1">1M</string>
    <string name="month3">3M</string>
    <string name="month6">6M</string>
    <string name="year1">1Y</string>
    <string name="wait">Please, wait..</string>
    <string name="all">All</string>
    <string name="Time">Time</string>
    <string name="history_no">This currency has no history yet :(</string>
    <string name="eror_mess">Connection Error :(</string>
    <string name="converter">Converter</string>
    <string name="search">Search</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="profile">Profile</string>
    <string name="catalog">Catalog</string>
    <string name="analytics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="mbps">Mbps</string>
    <string name="hashAver">Сердняя скорость</string>
    <string name="unpaid">Невыплаченный баланс</string>
    <string name="activRigs">Активных ригов</string>
    <string name="validShares">Шары за последний час</string>
    <string name="unconfirmed">Неподтвержденный баланс</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forget">Forgot your password?</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
</resources>
