<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCard"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_error_mess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/eror_mess"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tv_history_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/history_no"
                        android:textSize="20sp"/>

                    <ProgressBar
                        android:id="@+id/pb_chart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/lc_line_chart"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:padding="4dp"/>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_today"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/today"/>

                    <TextView
                        android:id="@+id/tv_1w"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/week1"/>

                    <TextView
                        android:id="@+id/tv_1m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/month1"/>

                    <TextView
                        android:id="@+id/tv_3m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/month3"/>

                    <TextView
                        android:id="@+id/tv_6m"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/month6"/>

                    <TextView
                        android:id="@+id/tv_1y"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/year1"/>

                    <TextView
                        android:id="@+id/tv_all"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/all"/>
                </LinearLayout>

                <View
                    android:layout_width="300dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorWhite"/>


                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:textSize="32sp"/>

                <TextView
                    android:id="@+id/tv_perc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
            </LinearLayout>
            <View
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rates"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBackground"
                android:padding="4dp"
                android:layout_marginTop="4dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/tv_name_market_cap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/market_cap"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_value_market_cap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBackground"
                android:padding="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/tv_name_volume24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/volume_24h"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_volume24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBackground"
                android:padding="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:id="@+id/tv_name_supply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/supply"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_supply_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="16sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorBackground"
                android:padding="4dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>