<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearGauge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/wall"
            android:orientation="vertical"
            tools:context="com.unionOfMiners.android.union.fragment.GaugeViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hashAver"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unpaid"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/activRigs"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/validShares"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unconfirmed"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="8dp">

                    <TextView
                        android:id="@+id/averHashRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="8dp">

                    <TextView
                        android:id="@+id/unpaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:id="@+id/actWorkers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:id="@+id/validShares"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/colorTable"
                    app:cardCornerRadius="0dp"
                    app:contentPadding="4dp">

                    <TextView
                        android:id="@+id/unconfirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="8sp"/>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>

        <!--<FrameLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center">-->

        <!--<com.github.anastr.speedviewlib.ImageSpeedometer-->
        <!--android:id="@+id/speedometer"-->
        <!--android:layout_width="260dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:sv_image="@drawable/gauge"-->
        <!--android:layout_gravity="center"-->
        <!--app:sv_unit="@string/mbps"-->
        <!--app:sv_maxSpeed="1800"/>-->


        <com.github.anastr.speedviewlib.AwesomeSpeedometer
            android:id="@+id/awsSpedometer"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center_horizontal"
            app:sv_maxSpeed="1600"
            app:sv_unit="@string/mbps"/>
        <!--</FrameLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_speed"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:padding="4dp"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>